fixed mobile layout issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -140,6 +140,11 @@ body {
   }
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .active-link {
   @apply bg-gradient-to-r from-indigo-500 to-purple-500 bg-clip-text text-transparent;
 }
